# agentic-protos

./: .gitignore  Cargo.toml  README.md  build.rs  test_grpc.sh
migrations/: 20240516000000_create_counters_table.sql  20240516000001_add_counter_stats.sql  20240516_initial_schema.sql
protos/: hello_service.proto
src/: database.rs  main.rs  tdd_sample.rs
