[package]
name = "agentic-protos"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
prost = "0.13.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

# SQLite database support
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
thiserror = "1.0.50"
env_logger = "0.10.0"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.13.0"